fix form margin on mobile

--- a/src/components/contact-form/contact-form.scss
+++ b/src/components/contact-form/contact-form.scss
@@ -2,7 +2,7 @@
 
 .contact-form-container {
   padding: 25px 0;
-  margin: 0;
+  margin: 0!important;
   width: 100%;
   background-color: $white;
 
